Changelog
=========


1.13.1 (unreleased)
-------------------

- Nothing changed yet.


1.13.0 (2015-02-20)
-------------------

- ``bin/upgrade``: automatically authenticate with a tempfile
  negotiation mechanism when no other authentication information is
  provided.
  [jone]

- New ``bin/upgrade user`` command for testing authentication.
  [jone]


1.12.0 (2015-02-16)
-------------------

- Add ``bin/upgrade`` commands ``sites``, ``list`` and ``install``.
  This makes it possible to install upgrades from the console.
  [jone]

- Update upgrade step scaffold to support plone.reload.
  [jone]

- New JSON API implemented, accessible with `/upgrades-api`.
  [jone]

- Executioner: `install_upgrades_by_api_ids` was added, allowing to install
  a selection of upgrades identified by API ugprade ids.
  [jone]

- Gatherer: `get_upgrades_by_api_ids` was added, returning upgrade infos
  for a selection of API upgrade ids.
  [jone]

- Gatherer: `get_upgrades` is deprecated and replaced by `get_profiles`.
  `get_profiles` now has a `proposed_only` flag.
  [jone]


1.11.0 (2015-01-08)
-------------------

- Reverse post upgrade adapter ordering.
  The order was reversed, it should execute dependencies first.
  [jone]

- create-upgrade: Make sure to quote argument passed to bin/upgrade.
  [lgraf]

- Add a ``create-upgrade`` script which can be installed globally.
  [jone]

- Create a ``bin/upgrade`` script:

  - the ``create`` command creates a upgrade step in the "upgrades" directory.
  - the ``touch`` command can be used for reordering upgrade steps.

  [jone]

- New ``upgrade-step:directory`` directive for registering a directory
  with upgrade steps which are automatically detected and registered.
  [jone]

- Extend the importProfile directive so that a handler can be
  defined. The handler may import the associated upgrade step
  profile with the new method ``self.install_upgrade_profile()``.
  [jone]


1.10.2 (2014-11-19)
-------------------
