@@ -5,7 +5,8 @@ Changelog
 1.13.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- plone.reload support for upgrade step directory.
+  [jone]
 
 
 1.13.0 (2015-02-20)
